--- a/Macauto_MAM/Base.lproj/Main.storyboard
+++ b/Macauto_MAM/Base.lproj/Main.storyboard
@@ -220,53 +220,60 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="53" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gyR-Ad-JGA">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gyR-Ad-JGA">
                                 <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="notificationCell" rowHeight="53" id="8dc-JC-N00" userLabel="notificationCell">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="notificationCell" rowHeight="53" id="T3g-H1-fQM">
                                         <rect key="frame" x="0.0" y="28" width="320" height="53"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8dc-JC-N00" id="SRQ-qq-QDE">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="T3g-H1-fQM" id="n1R-r7-KtZ">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="53"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="102" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="new" translatesAutoresizingMaskIntoConstraints="NO" id="lgw-ay-jWK">
+                                                <imageView userInteractionEnabled="NO" tag="102" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pcy-tA-DQh">
                                                     <rect key="frame" x="16" y="8" width="20" height="20"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="20" id="AJ8-tz-ZAB"/>
-                                                        <constraint firstAttribute="width" constant="20" id="fJJ-JL-hHL"/>
+                                                        <constraint firstAttribute="height" constant="20" id="9nm-NW-p5c"/>
+                                                        <constraint firstAttribute="width" constant="20" id="KcS-6V-jZA"/>
                                                     </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lFq-ac-M0E">
-                                                    <rect key="frame" x="40" y="12" width="272" height="25"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="clu-Fw-FwA">
+                                                    <rect key="frame" x="40" y="12" width="264" height="24.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4c6-0j-hrB" userLabel="title">
-                                                            <rect key="frame" x="0.0" y="0.0" width="190.5" height="25"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUG-7G-ttT" userLabel="title">
+                                                            <rect key="frame" x="0.0" y="0.0" width="132" height="24.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gIk-Jl-Pe2" userLabel="time">
-                                                            <rect key="frame" x="190.5" y="0.0" width="81.5" height="25"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="103" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="day" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bG-Q9-Qom" userLabel="day">
+                                                            <rect key="frame" x="132" y="0.0" width="79.5" height="24.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rwb-eJ-xvP" userLabel="time">
+                                                            <rect key="frame" x="211.5" y="0.0" width="52.5" height="24.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="gIk-Jl-Pe2" firstAttribute="width" secondItem="lFq-ac-M0E" secondAttribute="width" multiplier="0.3" id="DSM-DN-0DZ"/>
-                                                        <constraint firstItem="4c6-0j-hrB" firstAttribute="width" secondItem="lFq-ac-M0E" secondAttribute="width" multiplier="0.7" id="xgd-9V-JaV"/>
+                                                        <constraint firstItem="Rwb-eJ-xvP" firstAttribute="width" secondItem="clu-Fw-FwA" secondAttribute="width" multiplier="0.2" id="5Hd-pW-upH"/>
+                                                        <constraint firstItem="vUG-7G-ttT" firstAttribute="width" secondItem="clu-Fw-FwA" secondAttribute="width" multiplier="0.5" id="UcR-2n-ebC"/>
+                                                        <constraint firstItem="7bG-Q9-Qom" firstAttribute="width" relation="lessThanOrEqual" secondItem="clu-Fw-FwA" secondAttribute="width" multiplier="0.3" id="Wdn-LO-mmA"/>
                                                     </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="lFq-ac-M0E" secondAttribute="bottom" constant="7.5" id="Oo1-88-0WD"/>
-                                                <constraint firstItem="lFq-ac-M0E" firstAttribute="trailing" secondItem="SRQ-qq-QDE" secondAttribute="trailingMargin" id="Vqa-it-LwJ"/>
-                                                <constraint firstItem="lgw-ay-jWK" firstAttribute="top" secondItem="SRQ-qq-QDE" secondAttribute="topMargin" id="iJb-1E-bbb"/>
-                                                <constraint firstItem="lgw-ay-jWK" firstAttribute="leading" secondItem="SRQ-qq-QDE" secondAttribute="leadingMargin" constant="8" id="klR-DR-nWV"/>
-                                                <constraint firstItem="lFq-ac-M0E" firstAttribute="top" secondItem="SRQ-qq-QDE" secondAttribute="topMargin" constant="4" id="mmS-TY-s2d"/>
-                                                <constraint firstItem="lFq-ac-M0E" firstAttribute="leading" secondItem="lgw-ay-jWK" secondAttribute="trailing" constant="4" id="p4d-mQ-3Hr"/>
+                                                <constraint firstItem="clu-Fw-FwA" firstAttribute="top" secondItem="n1R-r7-KtZ" secondAttribute="topMargin" constant="4" id="4ra-7H-KKV"/>
+                                                <constraint firstItem="clu-Fw-FwA" firstAttribute="leading" secondItem="pcy-tA-DQh" secondAttribute="trailing" constant="4" id="Ugk-nu-LX7"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="clu-Fw-FwA" secondAttribute="trailing" constant="8" id="kga-QA-0Zf"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="clu-Fw-FwA" secondAttribute="bottom" constant="8" id="kkH-To-D7d"/>
+                                                <constraint firstItem="pcy-tA-DQh" firstAttribute="leading" secondItem="n1R-r7-KtZ" secondAttribute="leadingMargin" constant="8" id="n10-af-Eiq"/>
+                                                <constraint firstItem="pcy-tA-DQh" firstAttribute="top" secondItem="n1R-r7-KtZ" secondAttribute="topMargin" id="zAh-S6-ukk"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -323,6 +330,5 @@
         <image name="gear" width="27" height="27"/>
         <image name="ic_exit_to_app_48pt" width="48" height="48"/>
         <image name="mail" width="27" height="27"/>
-        <image name="new" width="10" height="10"/>
     </resources>
 </document>
